<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.dertefter.shapemorphview.ShapeMorphView
            android:id="@+id/smv"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:animationDuration="500"
            app:bgColor="?attr/colorPrimaryContainer"
            app:imageResource="@drawable/ic_1"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:shape="SLANTED_SQUARE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nextIconButton"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/next_icon"
                app:icon="@drawable/ic_next"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

            <Button
                android:id="@+id/nextImageButton"
                style="@style/Widget.Material3Expressive.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/next_image"
                app:icon="@drawable/ic_next"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />
        </LinearLayout>

        <Button
            android:id="@+id/nextShapeButton"
            style="@style/Widget.Material3Expressive.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/next_shape"
            app:icon="@drawable/ic_next"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anim_duration" />

            <com.google.android.material.slider.Slider
                android:id="@+id/animationDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:value="500.0"
                android:valueFrom="0.0"
                android:valueTo="1000.0"
                app:tickColor="@android:color/transparent" />

            <CheckBox
                android:id="@+id/animateCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/with_animation" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>